// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test view empty 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <RCTScrollView
    ItemSeparatorComponent={[Function]}
    data={Array []}
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    onContentSizeChange={[Function]}
    onEndReachedThreshold={2}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    showsVerticalScrollIndicator={false}
    stickyHeaderIndices={Array []}
    style={
      Object {
        "flex": 1,
        "width": "100%",
      }
    }
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={21}
  >
    <View />
  </RCTScrollView>
</View>
`;

exports[`Test view with chats 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <RCTScrollView
    ItemSeparatorComponent={[Function]}
    data={
      Array [
        Object {
          "id": "chatTwo",
          "lastTxCurrency": 1,
          "lastTxId": "txTwo",
          "name": "username",
          "notificationCount": 12,
          "timestamp": 222111,
          "type": 1,
        },
        Object {
          "details": Object {
            "address": "address#1",
            "currency": 0,
          },
          "id": "chatOne",
          "lastTxCurrency": 0,
          "lastTxId": "txOne",
          "name": "address#1",
          "notificationCount": 15,
          "timestamp": 123123,
          "type": 0,
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    onContentSizeChange={[Function]}
    onEndReachedThreshold={2}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    showsVerticalScrollIndicator={false}
    stickyHeaderIndices={Array []}
    style={
      Object {
        "flex": 1,
        "width": "100%",
      }
    }
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={21}
  >
    <View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View
            style={
              Object {
                "height": 80,
                "width": "100%",
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "marginLeft": "4%",
                  "marginRight": "3%",
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../assets/img/kusama.png",
                  }
                }
                style={
                  Object {
                    "borderColor": "black",
                    "borderRadius": 30,
                    "borderWidth": 0.8,
                    "height": 60,
                    "overflow": "hidden",
                    "width": 60,
                  }
                }
              />
              <View
                style={
                  Object {
                    "flex": 1,
                    "flexDirection": "column",
                    "marginLeft": 10,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                      "height": 25,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 3,
                      }
                    }
                  >
                    <Text
                      style={
                        Array [
                          Object {
                            "color": "black",
                            "fontFamily": "Roboto-Bold",
                            "fontSize": 15,
                            "fontStyle": "normal",
                            "fontWeight": "normal",
                          },
                          Object {
                            "textAlign": "left",
                          },
                        ]
                      }
                    >
                      username
                    </Text>
                  </View>
                  <View
                    style={
                      Object {
                        "flex": 1,
                      }
                    }
                  >
                    <Text
                      style={
                        Array [
                          Object {
                            "color": "#888888",
                            "fontFamily": "Roboto-Regular",
                            "fontSize": 13,
                            "fontStyle": "normal",
                          },
                          Object {
                            "textAlign": "right",
                          },
                        ]
                      }
                    >
                      01/01/70
                    </Text>
                  </View>
                </View>
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                      "height": 25,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 8,
                      }
                    }
                  >
                    <Text
                      style={
                        Array [
                          Object {
                            "color": "#888888",
                            "fontFamily": "Roboto-Regular",
                            "fontSize": 15,
                            "fontStyle": "normal",
                            "fontWeight": "normal",
                          },
                          Object {
                            "textAlign": "left",
                          },
                        ]
                      }
                    >
                      Sent -$100015 (100005 KSM)
                    </Text>
                  </View>
                  <View
                    style={
                      Object {
                        "alignItems": "flex-end",
                        "flex": 1,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "backgroundColor": "#C4C4C4",
                          "borderRadius": 20,
                          "paddingLeft": 8,
                          "paddingRight": 8,
                        }
                      }
                    >
                      <Text
                        style={
                          Array [
                            Object {
                              "color": "white",
                              "fontFamily": "Roboto-Regular",
                              "fontSize": 13,
                              "fontStyle": "normal",
                            },
                          ]
                        }
                      >
                        12
                      </Text>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "backgroundColor": "#ededed",
              "height": 1,
              "marginLeft": 80,
              "width": "100%",
            }
          }
        />
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View
            style={
              Object {
                "height": 80,
                "width": "100%",
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "marginLeft": "4%",
                  "marginRight": "3%",
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../assets/img/dot.png",
                  }
                }
                style={
                  Object {
                    "borderColor": "black",
                    "borderRadius": 30,
                    "borderWidth": 0.8,
                    "height": 60,
                    "overflow": "hidden",
                    "width": 60,
                  }
                }
              />
              <View
                style={
                  Object {
                    "flex": 1,
                    "flexDirection": "column",
                    "marginLeft": 10,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                      "height": 25,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 3,
                      }
                    }
                  >
                    <Text
                      style={
                        Array [
                          Object {
                            "color": "black",
                            "fontFamily": "Roboto-Bold",
                            "fontSize": 15,
                            "fontStyle": "normal",
                            "fontWeight": "normal",
                          },
                          Object {
                            "textAlign": "left",
                          },
                        ]
                      }
                    >
                      address#1
                    </Text>
                  </View>
                  <View
                    style={
                      Object {
                        "flex": 1,
                      }
                    }
                  >
                    <Text
                      style={
                        Array [
                          Object {
                            "color": "#888888",
                            "fontFamily": "Roboto-Regular",
                            "fontSize": 13,
                            "fontStyle": "normal",
                          },
                          Object {
                            "textAlign": "right",
                          },
                        ]
                      }
                    >
                      01/01/70
                    </Text>
                  </View>
                </View>
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                      "height": 25,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 8,
                      }
                    }
                  >
                    <Text
                      style={
                        Array [
                          Object {
                            "color": "#888888",
                            "fontFamily": "Roboto-Regular",
                            "fontSize": 15,
                            "fontStyle": "normal",
                            "fontWeight": "normal",
                          },
                          Object {
                            "textAlign": "left",
                          },
                        ]
                      }
                    >
                      Sent -$10001 (10000 DOT)
                    </Text>
                  </View>
                  <View
                    style={
                      Object {
                        "alignItems": "flex-end",
                        "flex": 1,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "backgroundColor": "#C4C4C4",
                          "borderRadius": 20,
                          "paddingLeft": 8,
                          "paddingRight": 8,
                        }
                      }
                    >
                      <Text
                        style={
                          Array [
                            Object {
                              "color": "white",
                              "fontFamily": "Roboto-Regular",
                              "fontSize": 13,
                              "fontStyle": "normal",
                            },
                          ]
                        }
                      >
                        15
                      </Text>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;
